<resources>
    <string name="app_name">Lite Messenger</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="chatsIsdelete">Чаты удалены</string>
    <string name="chatsIsMobileDelete">Чаты с устройства удалены</string>

    <!-- LoginActivity Strings-->
    <string name="editTextLogin">Логин</string>
    <string name="editTextPassword">Пароль</string>
    <string name="editTextPassword2">Повторно пароль</string>
    <string name="buttonSubmitRegister">Зарегистрироваться</string>
    <string name="buttonGoToLogin">Уже зарегистрированы? Войдите!</string>

    <!--Register Strings-->
    <string name="textViewErrorsEmptyLogin">Заполните поле логина</string>
    <string name="textViewErrorsEmptyPassword">Заполните поле пароля</string>
    <string name="textViewErrorsEmptyPassword_2">Заполните поле повторного пароля</string>
    <string name="textViewErrorsPassword_2NotEqualy">Поля пароля не совпадают</string>
    <string name="textViewErrorsSuccess">Вы успешно зарегистрировались!</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>